--- a/public/index.html
+++ b/public/index.html
@@ -53,7 +53,9 @@
 <div class="footer">
 </div>
 
-
+<div class="footnote">
+&#169 1991 - 2013 Accusoft Corporation. All Rights Reserved.
+</div>
 <!-- Scripts -->
 <script type="text/javascript" src="lib/js/jquery.min.js"></script>
 <script type="text/javascript" src="lib/js/app.js"></script>
